splitmuxsink: Change files on incompatible caps

https://bugzilla.gnome.org/show_bug.cgi?id=761761